smokes_mojo/public/css/smokes.css
body, th, td {
    font-size: 12px;
    font-family: Arial, sans-serif;
}

table#commits {
    padding: 1px;
    min-width: 800px;
}

#commits .compiler {
    width: 12em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

#commits .when_at {
    white-space: nowrap;
}

#unparsed .subject {
    width: 40em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

table {
    border-left: 1px solid #AAA;
    border-top: 1px solid #AAA;
    border-collapse: collapse;
}

td, th {
    padding: 2px;
    border-right: 1px solid #AAA;
    border-bottom: 1px solid #AAA;
}

#commits tr.group td {
    padding: 10px;
    font-size: 120%;
}

#commits tr.doubt .status {
    background-color: #EEC;
}

#commits tr.fail .status {
    background-color: #F99;
}

#commits tr.pass .status {
    background-color: #CFC;
}

#commits.hideduplicates tr.smoke:nth-child(even of :not([class*="duplicate"])),
#commits:not([class*="hideduplicates"]) tr.smoke:nth-child(even) {
    background-color: #EEE;
}

/* there's probably a better way to do this */
#commits tr.smoke:hover,
#commits.hideduplicates tr.smoke:hover:nth-child(even of :not([class*="duplicate"])),
#commits:not([class*="hideduplicates"]) tr.smoke:hover:nth-child(even) {
    background-color: #CCC;
}

#commits.hideduplicates tr.duplicate {
    display: none;
}

#commits tr.hide {
    display: none;
}

#commits tr.commit {
    background-color: #DDD;
}

#commits .commit td {
    font-size: 14px;
    padding-top: 6px;
    font-weight: 700;
}

#commits .commit a {
    color: #000;
    text-decoration: none;
}

#commits .commit a:hover {
    color: #222;
    text-decoration: underline;
}

#dbreport .fail {
    background-color: #F00;
    color: #FFF;
}

#branchform {
    position: absolute;
    right: 10px;
}

.autocomplete {
    display: inline-block;
}

.autocomplete input {
    width: 15em;
}

#branches {
    position: absolute;
    top: 100%;
    z-index: 99;
}

menu {
    list-style: none;
    padding: 0;
}

menu li {
    border-left: 2px solid #000;
    background-color: #CCC;
    display: inline-block;
    font-size: 14px;
}
menu li:hover {
    background-color: #EEE;
}
menu li a {
    display: block;
    padding: 3px;
    text-decoration: none;
}

menu li.right {
    float: right;
}

.filters input {
  width: 100%;
  border: none;
  background-color: #CFC;
}

.links {
    font-size: 14px;
}

.links a:hover {
    background-color: #CCC;
}

